--- a/01-index.qmd
+++ b/01-index.qmd
@@ -2,7 +2,7 @@
 title: "Welcome"
 format:
   html:
-    fontsize: 0.73em
+    fontsize: 0.8em
     linestretch: 1
 ---
 
@@ -10,9 +10,9 @@ format:
 
 ::: columns
 ::: {.column width="65%"}
-Hi, there! My name is Adrian Correndo. I was born and raised in Buenos Aires, Argentina. I live with my wife (Milagros) and our little girl (Amelie) in Manhattan, Kansas, USA, where I got my Ph.D. in Agronomy in 2021.
+Hi, there! My name is Adrian Correndo. I was born and raised in Buenos Aires, Argentina. I live with my wife (Milagros) and our little girl (Amelie) in Manhattan, Kansas, USA, where I obtained my Ph.D. in Agronomy in 2021.
 
-Currently, I am a Postdoctoral Fellow at Kansas State Univeristy collaborating on various research projects and outreach activities, with special focus on digital support tools for corn and soybean crops.
+Currently, I am a Postdoctoral Fellow at Kansas State University collaborating on various research projects, education, and outreach activities, with special focus on digital support tools for corn and soybean crops.
 
 My mission is to substantially contribute to the development and transfer of science for sustainable farming systems.
 
@@ -36,4 +36,4 @@ If you're interested in my digital developments, my [Digital Resources](https://
 
 ## 📂 CV
 
-Download CV: [{{< fa file-pdf >}}](https://raw.githubusercontent.com/adriancorrendo/adriancorrendo.github.io/main/assets/resources/CV_Correndo_APR-2023.pdf){#CV}
+Download CV: [{{< fa file-pdf >}}](https://raw.githubusercontent.com/adriancorrendo/adriancorrendo.github.io/main/assets/resources/CV_Correndo_APR-03-2023.pdf){#CV}
