--- a/01-index.qmd
+++ b/01-index.qmd
@@ -9,6 +9,13 @@ format:
 # 🙋🏻 Bio
 
 ::: columns
+::: {.column width="33%"}
+![](images/Adrian%20Correndo-KSU.jpg){fig-align="center" width="295"}
+:::
+
+::: {.column width="2%"}
+:::
+
 ::: {.column width="65%"}
 Hi, there! My name is Adrian Correndo. I was born and raised in Buenos Aires, Argentina. I live with my wife (Milagros) and our little girl (Amelie) in Manhattan, Kansas, USA, where I obtained my Ph.D. in Agronomy in 2021.
 
@@ -18,21 +25,21 @@ My mission is to substantially contribute to the development and transfer of sci
 
 Teamwork is my favorite word, an essential part of my professional and personal philosophy. I work to inspire and support the future leaders of agriculture.
 :::
-
-::: {.column width="35%"}
-![](images/Adrian%20Correndo-KSU.jpg){fig-align="center" width="295"}
-:::
 :::
 
 ## 👷🏻What do I do?
 
 I work to identify and promote best management practices for cropping systems at multiple scales. I heavily rely my work on applied statistics and reproducible programming to develop accessible and cross-scale digital tools that put modern data analytics (e.g. Machine Learning, Bayesian stats) to the service of our communities.
 
-On my [Career](https://adriancorrendo.github.io/02-career.html) section you will find details on my professional life, experience, and interests.
+## 🗺️ Site Map
+
+On my [Career](https://adriancorrendo.github.io/02-career.html) section you'll find details on my professional life, experience, and interests.
 
 My [Publications](https://adriancorrendo.github.io/03-publications.html) section provides a summary the diverse type of literature material I have produced during my career.
 
 If you're interested in my digital developments, my [Digital Resources](https://adriancorrendo.github.io/03-digitalops.html) section includes links to my R-packages ( [*soiltestcorr*](https://adriancorrendo.github.io/soiltestcorr/), [*metrica*](https://adriancorrendo.github.io/metrica/)*, [XPolaris](https://cran.r-project.org/package=XPolaris)*), Shinyapps (user-friendly interfaces), digital repositories, and YouTube tutorials.
+
+At the [Talks](https://adriancorrendo.github.io/05-talks.html) section you'll find recorded presentations at a variety of conferences, symposiums, and meetings.
 
 ## 📂 CV
 
